Fixing category tiles on mobile

--- a/src/components/category-tile/category-tile.scss
+++ b/src/components/category-tile/category-tile.scss
@@ -36,7 +36,10 @@ category-tile {
 		border-bottom: $category-tile-border-height--xs solid $yellow;
 	}
 
-	.xs &:nth-child(2n) {
+	.xs .home &:nth-child(2n + 1),
+	.xs .category &:nth-child(2n),
+	.xs .home &:nth-child(3),
+	.xs .home &:nth-child(2) {
 		margin-right: 0;
 	}
 
