--- a/src/components/promo-slot/promo-slot.scss
+++ b/src/components/promo-slot/promo-slot.scss
@@ -37,7 +37,7 @@ $promo-slot-height--vertical--md: 386px;
 	.xs & {
 		width: 100%;
 		height: 50vw;
-		margin-bottom: 20px;
+		margin-bottom: $distance-sm;
 	}
 
 	.md & {
@@ -57,7 +57,7 @@ $promo-slot-height--vertical--md: 386px;
 	.xs & {
 		width: calc(50% - 5px);
 		margin: 0 10px 10px 0;
-	    height: 100vw;
+	    height: calc(100vw + 15px);
 	}
 
 	.md & {
